--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-10-16  Ilkka Tuohela  <hile@iki.fi>
+
+	* fi.po: Added Finnish translation.
+	* LINGUAS: added fi to LINGUAS
+
 2006-10-16  Clytie Siddall <clytie@riverland.net.au>
 
 	* vi.po: Updated Vietnamese translation.
