--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,5 +1,9 @@
 2006-10-16  Ilkka Tuohela  <hile@iki.fi>
 
+	* fi.po: Updated Finnish translation.
+
+2006-10-16  Ilkka Tuohela  <hile@iki.fi>
+
 	* fi.po: Added Finnish translation.
 	* LINGUAS: added fi to LINGUAS
 
