Fixed number of jumps if rjTimeLimit deleted last jump

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,6 +1,9 @@
 CHANGELOG:
 
 24 oct 2006
+	Fixed number of jumps if rjTimeLimit deleted last jump
+
+24 oct 2006
 	progrVersion changed to "0.5-Pre4"
 	on rjTime limit, no events can be now out of time
 	PulseGtk from 150ms to 0,5
