forgot upload some files

--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,8 @@
 CHANGELOG:
 
+	fixed value of events done on interval and reactive when last subevent is
+	deleted because of the synchro between chronometers
+
 24 oct 2006
 	progrVersion changed to "0.5-Pre5"
 	runInterval timelimit uses new jumpReactive time limit code
