--- a/web/_gl/Pages/faq
+++ b/web/_gl/Pages/faq
@@ -89,7 +89,7 @@ Entre na páxina web de <a href="installation_gl.html">instalación de ChronoJum
 Si, creouse un modo simulado no que se executan saltos, carreiras de duración aleatoria e ritmos para que se poidan probar as características do programa.
 
 <p><li>Cando sairá a versión 1.0 e que prestacións terá?
-<p>Ata o momento (a piques de saír a versión 0.4) ChronoJump xa ten máis prestacións que o resto de solucións comerciais e non-comerciais das que temos coñecemento. Pero aínda hai moitos aspectos que incorporar e/ou mellorar que se van describindo no arquivo de <a href="http://cvs.gnome.org/viewcvs/chronojump/roadmap.txt"><i>roadmap</i> ou folla de ruta</a> (inglés).<br>
+<p>Ata o momento (versión :::currentVersion:::) ChronoJump xa ten máis prestacións que o resto de solucións comerciais e non-comerciais das que temos coñecemento. Pero aínda hai moitos aspectos que incorporar e/ou mellorar que se van describindo no arquivo de <a href="http://cvs.gnome.org/viewcvs/chronojump/roadmap.txt"><i>roadmap</i> ou folla de ruta</a> (inglés).<br>
 Se desexa realizar peticións de novas prestacións non dubide en escribir unha mensaxe á lista  <a href="contact_gl.html">chronojump-list</a>.
 
 <p><li>Como podo saber as últimas novidades do proxecto?
