--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2006-11-18  Djihed Afifi <djihed@gmail.com> 
+
+	* ar.po: Added Arabic Translation.
+	* LINGUAS: Added ar.
+
 2006-10-16  Ilkka Tuohela  <hile@iki.fi>
 
 	* fi.po: Updated Finnish translation.
