--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-01-23  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation
+
 2006-12-04  Francisco Javier F. Serrador  <serrador@openshine.com>
 
 	* es.po: Updated Spanish translation.
