--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2007-01-30  Pema Geyleg  <pema.geyleg@gmail.com>
+
+	* dz.po: Added Dzongkha Translation.
+	* LINGUAS: Added 'dz'.
+
 2007-01-23  David Lodge <dave@cirt.net>
 
 	* en_GB.po: Updated English (British) translation
