--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-02-17  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation
+
 2007-01-30  Pema Geyleg  <pema.geyleg@gmail.com>
 
 	* dz.po: Added Dzongkha Translation.
