--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,7 @@
+2007-03-11  David Lodge <dave@cirt.net>
+
+	* en_GB.po: Updated English (British) translation
+
 2007-02-21  Roberto Majadas  <telemaco@openshine.com>
 
 	* es.po : Update spanish translation
